log
Fri 12 May 2023 12:32:06 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
7440e0c
Fri 12 May 2023 12:32:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0eb1aa6
Fri 12 May 2023 12:32:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b3c441
Fri 12 May 2023 12:33:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
44303f0
Fri 12 May 2023 12:36:15 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: unused variable ‘aTop’ [-Werror=unused-variable]
   22 |   Heap * aTop = pq->heapArray->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
f41dbcd
Fri 12 May 2023 12:36:32 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c546d4c
Fri 12 May 2023 12:37:27 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3363ed0
Fri 12 May 2023 12:41:31 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   25 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
860804e
Fri 12 May 2023 12:41:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74c4cda
Fri 12 May 2023 12:43:17 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
17192c6
Fri 12 May 2023 12:43:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
391bba8
Fri 12 May 2023 12:44:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b12f316
Fri 12 May 2023 12:45:13 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7c30e19
Fri 12 May 2023 12:46:44 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1495869
Fri 12 May 2023 12:58:17 PM UTC: 
 heap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
0e08e2d
Fri 12 May 2023 01:00:46 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
35dec5c
Fri 12 May 2023 01:02:38 PM UTC: 
 heap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:46:12: error: operation on ‘pq->size’ may be undefined [-Werror=sequence-point]
   46 |   pq->size = pq->size++;
      |   ~~~~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
620e38a
Fri 12 May 2023 01:02:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
ef62fd2
Fri 12 May 2023 01:29:14 PM UTC: 
 heap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  3|2
total_score: 25/70
da63bad
Fri 12 May 2023 01:30:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
a88429c
Fri 12 May 2023 01:31:10 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 25/70
a4dbf50
Fri 12 May 2023 01:31:34 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
e0e20fa
Sat 13 May 2023 12:12:17 AM UTC: 
 heap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
3ac1ee7
Sat 13 May 2023 02:36:14 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
4b34047
Sat 13 May 2023 02:38:36 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 45/70
ba96580
Sat 13 May 2023 12:33:36 PM UTC: 
 heap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:75:22: error: variable ‘padre’ set but not used [-Werror=unused-but-set-variable]
   75 |   int hijoI, hijoD , padre;
      |                      ^~~~~
heap.c:75:14: error: variable ‘hijoD’ set but not used [-Werror=unused-but-set-variable]
   75 |   int hijoI, hijoD , padre;
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
80c00ee
Sat 13 May 2023 12:37:33 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
a1cd8ab
Sat 13 May 2023 12:40:01 PM UTC: 
 heap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  7|1
total_score: 45/70
9656f92
